--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -386,7 +386,7 @@ $$\frac{d}{dx}P(\frac{\bar X_n−1}{\frac1{\sqrt{n}}}\le x)=\frac{d}{dx}(\sum_{i
  
  $$\frac{d}{dx}P(Z\le x)=\frac{d}{dx}F_Z(x)= f_Z(x)=\frac1{\sqrt{2\pi}}e^{−\frac{x^2}2}$$
 
-Therefore, as $x\to\infty $,
+Therefore, as $x\to\infty$,
 
 $$\frac{\sqrt{n}}{\Gamma(n)}(x\sqrt{n}+n)^{n-1}e^{-(x\sqrt{n}+n)}\approx \frac1{\sqrt{2\pi}}e^{−\frac{x^2}2}$$
 
@@ -445,6 +445,8 @@ $$\therefore \lim_{n\to\infty}P(|X_n-\mu|>\varepsilon)=0\ge\begin{cases}\lim_{n\
  For every $\varepsilon>0$,
  
  $$P(|X_n-\mu|>\varepsilon)\le P(X_n-\mu<-\varepsilon)+P(X_n-\mu>\varepsilon)=P(X_n<\mu-\varepsilon)+1-P(X_n\le\mu+\varepsilon)\to0 \text{ as }n\to\infty$$
+ 
+ $$\because P(X_n\le x)\to\begin{cases}0&x=\mu-\varepsilon<\mu\\1&x=\mu+\varepsilon\ge\mu\end{cases}\therefore\lim_{n\to\infty}[ P(X_n<\mu-\varepsilon)+1-P(X_n\le\mu+\varepsilon)]\to(0+1-1)=0$$
  
  
  
