--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -272,11 +272,12 @@ $$\eta_{Cross}=\frac{\Delta Q_{Peak}/Q_{Peak}}{\Delta P_{Off}/P_{Off}}=\frac{\fr
 
 The result shows a positve cross elasticity of demand, which prove peak-period rail trips and off-peak trips are substitute goods. The absolue value of cross elasticity is closer to 0 than that of auto trips whcih indicate the number of peak-period tirps is very inelasitic with fare for rail transit.  Each percent decrease of fare for transit only brings 0.01076087% decrease in number of peak-period rail trips. It can be explain that commuting trips are not sensitive to the change of off-peak fare.
 
-
-  f. Please draw a demand curve andanswer the following questions using the diagram:
+ ---
+ 
+  f. Please draw a demand curve and answer the following questions using the diagram:
 
 ```{r echo=FALSE}
-plot(c(0,40000), c(0,0.4), type = "n",xlab ="#Off-Peak rail trips", ylab ="Off-Peak fare")
+plot(c(0,40000), c(0,0.4), type = "n",xlab ="## of Off-Peak rail trips", ylab ="Off-Peak fare ($)",xaxs = "i",yaxs = "i")
 curve(0.6130826+(0.1-0.25)/(32290-22850)*x, 10000, 35000, add = TRUE)
 points(22850, 0.25, pch =0);text(22850, 0.25,"Before",adj=c(-0.5,-0.5))
 points(32290, 0.10, pch =1);text(32290, 0.10,"After",adj=c(-0.5,-0.5))
@@ -288,26 +289,65 @@ for new riders")
 
 
    (i) Label the area of total daily benefits to riders, as measured by the increase in consumer surplus, of the “Dime Time” experiment?
-  
-  In above figure, point B represents the price (0.25) and ridership (22850) before Dime Time. Point A represents price (0.10) and ridership (32290). The area marked with oblique lines indicates the increase in consumer surplus because of Dime Time.   
+
+The whole shadow areas represent the increse in consumer surplus, which equal $\frac12(22850+32290)\times(0.25-0.1)=4135.5$
   
    (ii) Label how much of the increase in consumer surplus represented fare savings to passengers who already traveled on the rail system during the midday at the initial fare?
-  
-  In above figure, point B represents the price (0.25) and ridership (22850) before Dime Time. Point A represents price (0.10) and ridership (32290). The area marked with oblique lines indicates increase in consumer surplus represented fare savings to passengers who already traveled on the rail system during the midday at the initial fare.   
 
-  (iii) Describe verbally how were the benefits in(ii) divided among riders in the three income groups?
+The left shadow area represents the increse in consumer surplus for previous passengers, which equal $22850\times(0.25-0.1)=3427.5$
 
-The increase in consumer surplus to passengers who already traveled on the rail transit can be divided among riders in the three income groups. The number of low income people is largest, 9500, 42%. The next is moderate income people, 8250, 36%. The number of high income group is 5100, which accounts for smallest share 22%. 
+  (iii) Describe verbally how were the benefits in (ii) divided among riders in the three income groups?
 
-   (iv) Label on the diagram how much of the total benefit was received by new riders (who were initially not using rail) who began to use the rail system when the midday fare was reduced to 10 cents?
+```{r eval=FALSE, include=FALSE}
+(0.1-0.25)/(15020-9500)
+(0.1-0.25)/(10860-8250)
+(0.1-0.25)/(6410-5100)
 
-In above figure, point B represents the price (0.25) and ridership (22850) before Dime Time. Point A represents price (0.10) and ridership (32290). The area marked with oblique lines indicates increase in consumer surplus represented fare savings to new riders (who were initially not using rail) who began to use the rail system when the midday fare was reduced to 10 cents  
+(15020+9500)*(0.25-0.1)/2
+(10860+8250)*(0.25-0.1)/2
+(6410+5100)*(0.25-0.1)/2
 
-   (v) Describe how were the benefits in(iv) divided among riders inthe three income groups? Why is it important to distinguishbetweenconsumer benefits to passengers who had beenusing the rail system at the higher fare and those received by new riders who beganto use the system inresponse to the fare change?
+(15020-9500)*(0.25-0.1)/2
+(10860-8250)*(0.25-0.1)/2
+(6410-5100)*(0.25-0.1)/2
 
-Among the riders, there are 5220 (58%) low income people, 2610 (28%) moderate income people and 1310 (14%) high income people. The percentage of low income people is largest. 
+9500*(0.25-0.1)
+8250*(0.25-0.1)
+5100*(0.25-0.1)
 
-It is very important to distinguish between consumer benefits for existing passengers and new riders. Existing passengers were already willing to ride midday transit for the old fare, so their increase in consumer surplus from the program results in money saved but no behavioral change. New riders attracted by the new lower fare received some consumer surplus resulting from their travel mode change. The additional consumer surplus for the existing rail riders essentially translate into benefits for the consumer without any benefits for the transit agency. Besides, how policy attracts new riders can provide useful implication for policy-makers. 
+```
+
+```{r echo=FALSE}
+plot(c(0,40000), c(0,0.4), type = "n",xlab ="# of Off-Peak rail trips", ylab ="Off-Peak fare ($)",xaxs = "i",yaxs = "i")
+curve(0.25-(0.1-0.25)/(15020-9500)*9500+(0.1-0.25)/(15020-9500)*x, 0, 35000, add = TRUE);text(21000,0.03, "Low
+income")
+curve(0.25-(0.1-0.25)/(10860-8250)*8250+(0.1-0.25)/(10860-8250)*x, 0, 35000, add = TRUE);text(14500,0.03, "Mid
+income")
+curve(0.25-(0.1-0.25)/(6410-5100)*5100+(0.1-0.25)/(6410-5100)*x, 0, 35000, add = TRUE);text(9000,0.03, "High
+income")
+curve(0.6130826+(0.1-0.25)/(32290-22850)*x, 0, 35000, add = TRUE)
+points(22850, 0.25, pch =0);text(22850, 0.25,"Before",adj=c(-0.5,-0.5))
+points(32290, 0.10, pch =1);text(32290, 0.10,"After",adj=c(-0.5,-0.5))
+polygon(x=c(0,6410,5100,0), y=c(0.1,0.1,0.25,0.25), density=10, angle=-45,lty =3)
+polygon(x=c(6410,10860,8250,5100), y=c(0.1,0.1,0.25,0.25), density=10, angle=45,lty =3)
+polygon(x=c(10860,15020,9500,8250), y=c(0.1,0.1,0.25,0.25), density=10, angle=0,lty =3)
+abline(h =0.25, lty=3);text(1000,0.27, "0.25");abline(h =0.1, lty=3);text(1000,0.12, "0.1")
+```
+
+|     |previous consumer surplus | new consumer surplus | total surplus
+| ---       | ---  | ---  | --- |
+|Low income |1425  |414   |1839 
+|Mid income |1237.5|195.75|1433.25
+|High income|765   |98.25 |863.25
+|Total      |3427.5|708   |4135.5
+
+The fare saving to passengers who already traveled on the rail transit are divided to 3 parts: 41.57549% (low income group); 36.10503% (mid income group); 22.31947% (high income group).
+
+   (iv) Why is it important to distinguish between consumer benefits to passengers who had beenusing the rail system at the higher fare and those received by new riders who beganto use the system inresponse to the fare change?
+
+The purpose of subsidies is to encourage more transit trips. The effect of reduction in fare by MBTA is measured by the number of new passengers, who changed their travel behavior.
+
+ ---
 
  2. Using an aggregate demand model
 
@@ -315,53 +355,49 @@ Lee’s 1980 study of gasoline demand in California yielded the following estima
 
 |Explanatory Variable|Constant|Real Gasoline Price(\$)|Real Income (billion \$)|Population (millinons)|DEC73|JAN74|FEB74|MAR74|APR74|
 | ---                | ---:   | ---:                  |  ---:                  |   ---:               |---: |---: |---: |---: |---: |
-|Coefficient Estimate|-25193.1|-18552.8               |277.3                   |1567.9  |-1801.5  |1629.7  |-2313.1  |2524.1  |162.7|
+|Coefficient Estimate|-25193.1|-18552.8               |277.3                   |1567.9  |-1801.5  |-1629.7  |-2313.1  |-2524.1  |162.7|
 
+$$G=-25193.1-18552.8Pr+277.3In+1567.9Pop-1801.5Dec-1629.7Jan-2313.1Feb-2524.1Mar+162.7Apr+\varepsilon$$
 
   a. Two significant by-products of automobile use are air pollution and traffic congestion. In order to reduce the extent of each, suppose that the federal government raises the gasoline tax by $0.25. According to the above estimation results, what effect will this have on gasoline consumption in California? 
 
-∆GasDemand = β1* ∆RealGasolinePrice = -18552.8*0.25 = - 4638.2
+$$\widehat{\Delta G}=-18552.8*\Delta Pr=-18552.8\times0.25 =-4638.2$$
 
-Based on the aggregate demand model, if gasoline price increases $0.25, there gasoline demand will decrease 4638200 gallons of gas in California. 
+According to the model, when gasoline tax increases $0.25, the expected amount of gasoline consumption in California will decrease 4.6382 million gallons. 
 
   b. Use budget lines and indifference curves to illustrate the effect of the tax increase on gasoline consumption and consumer welfare (utility). In addition to the total effect, please label the substitution and income effects.
 
-
 ```{r echo=FALSE}
-
-plot(c(0,5), c(0,5), type = "n",xlab ="#Off-Peak rail trips", ylab ="Off-Peak fare",xaxs = "i",yaxs = "i")
+plot(c(0,5), c(0,5), type = "n",xlab ="Gasline consumption", ylab ="Substitution Good",xaxs = "i",yaxs = "i")
 curve(x^(-2), 0, 8,col = "red",add = TRUE,);text(0.5,4.5, "U1");
 abline(a=3,b=-2, lty = 1);points(1,1, pch =1);text(1,1,"C",adj=c(-0.5,-0.5))
 curve(8*(x)^(-2), 0, 8,col = "red",add = TRUE,);text(1.5,4.5, "U2");
 abline(a=6,b=-2, lty=2);points(2,2, pch =2);text(2,2,"B",adj=c(-0.5,-0.5))
 abline(a=3,b=-2^(-1/2), lty=1);points(sqrt(8),1, pch =3);text(sqrt(8),1,"A",adj=c(-0.5,-0.5))
-arrows(sqrt(8),1.2,2.2,1.9, length = 0.1, code = 2, col ="blue", lty = 4)
-arrows(1.2,1.3,1.8,1.9, length = 0.1, code = 1, col ="blue", lty = 4)
+arrows(sqrt(8),1.2,2.2,1.9, length = 0.1, code = 3, col ="blue", lty = 4)
+arrows(1.2,1.3,1.8,1.9, length = 0.1, code = 3, col ="blue", lty = 4)
+text(2.7,2, "substitution
+effect")
+text(1.6,1.2, "income
+effect")
 ```
 
- 
- The above figure illustrates the effect of the tax increase on gasoline consumption and consumer welfare (utility). Gasoline consumption is the X-axis. 
- 
-Due to the tax increase, the budget line has pivoted from B1 to B2 and the consumption point has moved from A to C. The decrease in the quantity demanded can be divided into two effects. 
-In the above figure, from point A to point B is substitution effect. The substitution effect is when the consumer switches consumption patterns due to increase of gas price alone but remains on the same indifference curve. To identify the substitution effect a new budget line needs to be constructed. The budget line B1* is added, this budget line is parallel with the budget line B2 and tangential to I1. Therefore, the movement from Q1 to Q2 is purely due to the substitution effect. 
-
-In the above figure, from point B to point C is income effect. The income effect highlights how consumption will change due to the consumer having a change in purchasing power as a result of the price change. The higher price means the budget line is B2, hence the optimum consumption point is Q2. This point is on a lower indifference curve (I2). 
 
   c. Wanting to increase the price of gasoline but not reduce economic welfare, suppose that, in addition to the \$0.25 cent tax on gasoline, the government also provides consumers with an income tax rebate amounting to \$16.7 billion dollars (total amount).
 
    (i) According to the estimation results above, what would be the effect of the gasoline tax and income tax policies on gasoline demand?
 
+$$\widehat{\Delta G}=-18552.8*\Delta Pr+277.3*\Delta In=-18552.8\times0.25+277.3\times16.7 =-7.29$$
 
-∆GasDemand = β1* ∆RealGasolinePrice + β2* ∆RealIncome = -18552.8*0.25 + 227.3*16.7 
-= -4638.2 + 4630.91 = -7.29
-
-The effect of the gasoline tax and income tax policies will decrease gasoline demand 7290 gallons. 
+The result shows the effect of income tax policies offsets the effect of gasoline tax on gasoline demand. the gasoline consumption only decrease 7290 gallons. 
 
    (ii) According to economic theory, would the gasoline tax rise combined with the welfare-offsetting income tax rebate produce any reduction in the demand for gasoline?
 
-A gas tax increase would result in both substitution effect (reduction in gasoline demand because of higher gas price) and income effect (reduction in gasoline demand because of lower purchase power). The income tax rebate would simply result in an income effect (increase in gas demand because of higher income). The welfare-offsetting income tax rebate should offset the income effects of the gas tax, and should not offset the substitution effect (reduction in gasoline demand because of higher gas price).
+The gasoline tax rise combined with the welfare-offsetting income tax rebate will not significently reduce the demand for gasoline. While the tax move the demand along the utility curve to left and change the slope of buget line, the income tax rebate will move the indifference curve to upper right. It negates the effect of policies.
 
   (iii) Given your analysis in parts (i) and (ii), is it possible to implement a policy that is consistent with the goals of environmentalists and yet not reduce the economic welfare of consumers?
+
+A possible policy is 
 
 Yes. It is possible to implement a policy that is consistent with the goals of environmentalists (gasoline tax decrease gasoline demand) and yet not reduce the economic welfare of consumers (tax rebate keeps the same consumer welfare). 
 
