--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -194,7 +194,7 @@ uniroot(function(x)(-0.00005*x^2+9.5*x-250000), lower=0, upper=100000)
 ## Problem Set 2
 
  1. Elasticities and Consumer Surplus 
-
+<span style="color:grey">
 In April of 1973, the Massachusetts Bay Transportation Authority (MBTA) initiated an experiment called “Dime Time.”(See attached article) On weekdays between the hours of 10am and 3pm, the fare for travel on the MBTA’s rail lines was reduced from 25 cents to 10 cents, but was 25 cents during all other hours. During the “Dime Time” experiment, which lasted until August1975, fares for bus travel remained at 20 cents per ride during all hours. The “Dime Time” experiment provided an unusual opportunity to evaluate the sensitivity of midday rail transit demand to a reduction in fare, a subject of interest to many transit operators and planners. 
 
 Table 1: Average weekday MBTA rail transit passengers between 10am and 3pm with “Dime Time”, by previous mode of travel and income class
@@ -217,9 +217,7 @@ Table 1: Average weekday MBTA rail transit passengers between 10am and 3pm with 
 Note on interpretation of this table: This table shows the average number of people who traveled via rail between 10am and 3pm during the “Dime Time” experiment. The different categories tell us what mode these people used before switching to rail.
 So, for example, we know that the total number of people riding the rail system during off-peak hours under “Dime Time” was 32,290. Of these 32,290, 22,850 passengers rode during these hours before the lower fare was introduced. 2,100 of the 32,290 previously rode the bus, but switched over to rapid transit with the new lower fare.
 
-<span style="color:blue">some *blue* text</span>
-
-  a. <span style="color:blue">Using the data provided in Table 1, estimate the fare elasticity of total weekday demand for MBTA rail transit service during midday (10am¬3pm)</span>.
+  a. Using the data provided in Table 1, estimate the fare elasticity of total weekday demand for MBTA rail transit service during midday (10am-3pm).</span>
 
 $$\text{Elasticity }\eta=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{32290-22850}{22850}}{\frac{0.1-0.25}{0.25}}=-0.6885485$$
 
@@ -227,7 +225,7 @@ The fare elasticity of total weekday demand for MBTA rail transit service during
 
  ---
  
-  b. According to this elasticity estimate, is the demand for midday rail transit service elastic or inelastic? Comment on your answer.
+  b. <span style="color:grey">According to this elasticity estimate, is the demand for midday rail transit service elastic or inelastic? Comment on your answer.</span>
 
 For $-0.6885485\in(-1,1)$, the demand for midday rail transit service is inelastic. The result shows that the ridership will decrease 0.6885% when fare has 1% increase, which indicates that the consumers are not sensitive with fare change.
 
